refactoring to lower cyc